--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="Oriol Busquet" content="" />
         <title>ShopNow</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
