--- a/checkout.html
+++ b/checkout.html
@@ -77,7 +77,8 @@
 				<h3 class="my-3 bord shadow text-center"><i class="fas fa-stopwatch p-2"></i>Delivery on time</h3>
 			</div>
 		</div>
-		<form class="form">
+		<!--<form class="form">-->
+		<form class="form" onsubmit="return validate()">
 			<div class="row bord p-5 shadow m-5">
 				<div class="col-sm-6">
 					<div class="mt-3">
@@ -119,7 +120,9 @@
 					</div>
 				</div>
 				<div class="col-12 mt-4 final">
-					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()">
+					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg">
+					<!--<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()">-->
+
 						<i class="fas fa-cart-arrow-down p-2"></i>Save
 					</button>
 				</div>
