--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="Oriol Busquet" content="" />
+        <meta name="Oriol Busquet-Sprint3" content="" />
         <title>ShopNow</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/estilos.css">
 
 		<!-- Bootstrap icons-->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -53,7 +54,7 @@
 		 </nav>
 
         <!-- Header-->
-        <header class="bg-dark py-5">
+        <header class="bg-primary py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">IT Academy Shop</h1>
@@ -68,7 +69,7 @@
 				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/cookingoil.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Cooking Oil</h5>
@@ -82,7 +83,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/pasta.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Pasta</h5>
@@ -96,7 +97,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/cupcake.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Instant cupcake mixture</h5>
@@ -112,13 +113,13 @@
 				</div>
 			</div>
 		</section>
-		<section class="pt-5" id="beauty">
+		<section class="pt-5 bg-primary" id="beauty">
 			 <h2 class="text-center"><i class="fas fa-heart pe-3"></i>Beauty</h2>
 			<div class="container px-4 px-lg-5 mt-5">
 				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/allin1.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">All-in-1</h5>
@@ -132,7 +133,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/zeromakeup.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Zero makeup kit</h5>
@@ -146,7 +147,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/liptints.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Lip tints</h5>
@@ -168,7 +169,7 @@
 				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/lawndress.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Lawn dress</h5>
@@ -182,7 +183,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/lawnchiffon.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Lawn-chiffon combo</h5>
@@ -196,7 +197,7 @@
 					</div>
 					<div class="col mb-5">
 						<div class="card h-100">
-							<img class="card-img-top" src="./images/product.svg" alt="..." />
+							<img class="card-img-top" src="images/toddler.webp" alt="..." />
 							<div class="card-body p-4">
 								<div class="text-center">
 									<h5 class="fw-bolder">Toddler Frock</h5>
@@ -214,7 +215,7 @@
 		</section>
 	
         <!-- Footer-->
-        <footer class="py-3 bg-dark">
+        <footer class="py-3 bg-primary">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
         </footer>
 		
