--- a/checkout.html
+++ b/checkout.html
@@ -25,7 +25,7 @@
 			<a class="navbar-brand" href="#!">ShopNow</a>
 			<div class="d-flex flex-row order-lg-last align-items-center">
 
-				<button type="button" class="navbar-toggler order-last collapsed" data-bs-toggle="collapse"
+				<button type="button" class="navbar-toggler order-last collapsed" data-bs-toggle="collapse">
 					data-bs-target="#navbar" aria-expanded="false" aria-controls="navbar">
 					<span class="navbar-toggler-icon"></span>
 				</button>
