--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</div>
 		</section>
 		<section class="pt-5 bg-primary" id="beauty">
-			 <h2 class="text-center"><i class="fas fa-heart pe-3"></i>Beauty</h2>
+			 <h2 class="text-center titlebeauty"><i class="fas fa-heart pe-3"></i>Beauty</h2>
 			<div class="container px-4 px-lg-5 mt-5">
 				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 					<div class="col mb-5">
