--- a/index.html
+++ b/index.html
@@ -243,18 +243,21 @@
 						  <td>$10.5</td>
 						  <td>2</td>
 						  <td>$21</td>
+						  <td><button class="btn-danger btnDeleteProducto" type="button">x</button></td>
 						</tr>
 						<tr>
 						  <th scope="row">Pasta</th>
 						  <td>$6.25</td>
 						  <td>1</td>
 						  <td>$6.25</td>
+						  <td><button class="btn-danger btnDeleteProducto" type="button">x</button></td>
 						</tr>
 						<tr>
 						  <th scope="row">Lawn dress</th>
 						  <td>$15</td>
 						  <td>3</td>
 						  <td>$45</td>
+						  <td><button class="btn-danger btnDeleteProducto" type="button">x</button></td>
 						</tr>
 					  </tbody>
 				  </table>
