--- a/checkout.html
+++ b/checkout.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<!-- Core theme CSS (includes Bootstrap)-->
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
@@ -58,23 +59,23 @@
 		</div>
 	</nav>
 	<div class="container">
-		<h1 class="text-center head m-4">Checkout Page</h1>
+		<h1 class="text-center head m-4 titleCheckout">Checkout Page</h1>
 
 		<div class="row mr-0">
 			<div class="col-sm-6">
-				<h3 class="my-3 bord shadow text-center"><i class="fas fa-dollar-sign p-2"></i>Cash on Delivery</h3>
+				<h3 class="txttitle my-3 bord shadow text-center bg-primary"><i class="fas fa-dollar-sign p-2"></i>Cash on Delivery</h3>
 			</div>
 			<div class="col-sm-6 ">
-				<h3 class="my-3 bord shadow text-center"><i class="fas fa-arrows-alt-h p-2"></i>100% Return</h3>
+				<h3 class="txttitle my-3 bord shadow text-center bg-primary"><i class="fas fa-arrows-alt-h p-2"></i>100% Return</h3>
 			</div>
 		</div>
 
 		<div class="row mr-0">
 			<div class="col-sm-6">
-				<h3 class="my-3 bord shadow text-center"><i class="far fa-thumbs-up p-2"></i>Quality Assured</h3>
+				<h3 class="txttitle my-3 bord shadow text-center bg-primary"><i class="far fa-thumbs-up p-2"></i>Quality Assured</h3>
 			</div>
 			<div class="col-sm-6 ">
-				<h3 class="my-3 bord shadow text-center"><i class="fas fa-stopwatch p-2"></i>Delivery on time</h3>
+				<h3 class="txttitle my-3 bord shadow text-center bg-primary"><i class="fas fa-stopwatch p-2"></i>Delivery on time</h3>
 			</div>
 		</div>
 		<!--<form class="form">-->
@@ -133,7 +134,7 @@
 
 
 	<!-- Footer-->
-	<footer class="py-3 bg-dark">
+	<footer class="py-3 bg-primary">
 		<div class="container">
 			<p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
 		</div>
