--- a/checkout.html
+++ b/checkout.html
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="container" id="Checkout">
 		<h1 class="text-center head m-4 titleCheckout">Checkout Page</h1>
 
 		<div class="row mr-0">
@@ -120,7 +120,7 @@
 						<div id="errorPhone" class="invalid-feedback">Invalid phone number!! Must be 9 digits with no letters</div>
 					</div>
 				</div>
-				<div class="col-12 mt-4 final">
+				<div class="col-12 mt-4 final text-center">
 					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg">
 					<!--<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()">-->
 
