--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		 </nav>
 
         <!-- Header-->
-        <header class="bg-primary py-5">
+        <header class="py-5" id="itAcademyShop">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">IT Academy Shop</h1>
